--- a/org.muml.verification.core.runtime.edit/.project
+++ b/org.muml.verification.core.runtime.edit/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.uni_paderborn.fujaba.muml.runtime.edit</name>
+	<name>org.muml.verification.core.runtime.edit</name>
 	<comment></comment>
 	<projects>
 	</projects>
