--- a/org.muml.verification.core.runtime.edit/plugin.xml
+++ b/org.muml.verification.core.runtime.edit/plugin.xml
@@ -19,7 +19,7 @@
    <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
       <!-- @generated RuntimeModel -->
       <factory
-            uri="http://www.fujaba.de/muml/runtime/0.4.0"
+            uri="http://www.muml.org/verification/core/runtime/1.0.0"
             class="org.muml.verification.core.runtime.provider.RuntimeItemProviderAdapterFactory"
             supportedTypes=
               "org.eclipse.emf.edit.provider.IEditingDomainItemProvider
