--- a/org.muml.verification.core.reachanalysis.reachabilitygraph.cic/plugin.xml
+++ b/org.muml.verification.core.reachanalysis.reachabilitygraph.cic/plugin.xml
@@ -5,10 +5,11 @@
 -->
 
 <plugin>
+
    <extension point="org.eclipse.emf.ecore.generated_package">
       <!-- @generated CICReachabilityGraph -->
       <package
-            uri="http://www.fujaba.de/reachabilityGraph/cic/0.4.0"
+            uri="http://www.muml.org/verification/core/reachanalysis/reachabilitygraph/cic/1.0.0"
             class="org.muml.verification.core.reachanalysis.reachabilitygraph.cic.CicPackage"
             genModel="model/CICReachabilityGraph.genmodel"/>
    </extension>
