--- a/org.muml.verification.core.reachanalysis.reachabilitygraph.rtsc/plugin.xml
+++ b/org.muml.verification.core.reachanalysis.reachabilitygraph.rtsc/plugin.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <?eclipse version="3.0"?><!--
 --><plugin>
-<extension point="org.eclipse.emf.ecore.generated_package">
-      <package class="org.muml.verification.core.reachanalysis.reachabilitygraph.rtsc.RtscPackage" genModel="model/RTSCReachabilityGraph.genmodel" uri="http://de.uni_paderborn.fujaba.muml.reachanalysis.reachabilityGraph/sdm"/>
-   </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
-      <?emfgen generated="true"?>
-      <package class="org.muml.verification.core.reachanalysis.reachabilitygraph.rtsc.RtscPackage" genModel="model/RTSCReachabilityGraph.genmodel" uri="http://www.fujaba.de/reachabilityGraph/rtsc/0.4.0"/>
+      <!-- @generated RTSCReachabilityGraph -->
+      <package
+            uri="http://www.muml.org/verification/core/reachanalysis/reachabilitygraph/rtsc/1.0.0"
+            class="org.muml.verification.core.reachanalysis.reachabilitygraph.rtsc.RtscPackage"
+            genModel="model/RTSCReachabilityGraph.genmodel"/>
    </extension>
 
 </plugin>
