[Renaming] [Migration] Textual replacement of references to org.muml.pim.component.diagram

--- a/org.muml.verification.core.refinement.testautomata/plugin.xml
+++ b/org.muml.verification.core.refinement.testautomata/plugin.xml
@@ -17,7 +17,7 @@
                            ifEmpty="false">
                         <or>
                            <instanceof
-                                 value="de.uni_paderborn.fujaba.muml.component.diagram.edit.parts.DiscretePortEditPart">
+                                 value="org.muml.pim.component.diagram.edit.parts.DiscretePortEditPart">
                            </instanceof>
                            <instanceof
                                  value="de.uni_paderborn.fujaba.muml.component.DiscretePort">
