[Renaming] [Migration] Textual replacement of references to org.muml.pim.realtimestatechart.diagram

--- a/org.muml.verification.core.reachanalysis.rtsc/plugin.xml
+++ b/org.muml.verification.core.reachanalysis.rtsc/plugin.xml
@@ -6,7 +6,7 @@
       <objectContribution
             adaptable="false"
             id="objectContribution.Zone"
-            objectClass="de.uni_paderborn.fujaba.muml.realtimestatechart.diagram.edit.parts.StateEditPart">
+            objectClass="org.muml.pim.realtimestatechart.diagram.edit.parts.StateEditPart">
          <menu
                id="RTSCZoneGraph.zoneGraph"
                label="Zone Graph"
